[FIX] NPM issues. Should be using Yarn

--- a/hubble-playground/package.json
+++ b/hubble-playground/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "hubble-test",
+  "name": "hubble-playground",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@deck.gl/layers": "^8.2.0",
-    "@deck.gl/react": "^8.2.0",
+    "@deck.gl/core": "^8.2.1",
+    "@deck.gl/layers": "^8.2.1",
+    "@deck.gl/react": "^8.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "deck.gl": "^8.2.0",
-    "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.7",
