--- a/hubble-playground/package.json
+++ b/hubble-playground/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-map-gl": "^5.2.7",
     "react-scripts": "3.4.1"
   },
