--- a/examples/kepler-integration/package.json
+++ b/examples/kepler-integration/package.json
@@ -1,25 +1,17 @@
 {
   "scripts": {
-    "bootstrap": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true yarn && ocular-bootstrap",
-    "checkjs": "tsc --noEmit --allowJs --checkJs --target ES5 src/*.js",
-    "clean": "ocular-clean",
-    "build": "ocular-clean && ocular-build && lerna run build",
-    "start": "webpack-dev-server --mode development --progress --hot --open",
-    "start-prod": "webpack-dev-server -p --progress --hot --open",
-    "start-local": "webpack-dev-server --mode development --env.es6 --progress --hot --open",
-    "start-local-e2e": "webpack-dev-server --mode development --env.es6",
-    "start-local-deck": "webpack-dev-server --mode development --env.es6 --env.deck --progress --hot --open",
-    "start-local-deck-src": "webpack-dev-server --mode development --env.es6 --env.deck_src --progress --hot --open",
-    "start-local-loaders-src": "webpack-dev-server --mode development --env.es6 --env.loaders_src --progress --hot --open",
-    "start-local-https": "webpack-dev-server --mode development --https --env.es6 --progress --hot --open"
+    "start": "webpack-dev-server --progress --hot --open",
+    "start-local": "webpack-dev-server --env.local --progress --hot --open"
   },
   "dependencies": {
+    "@luma.gl/debug": "^8.2.0",
+    "@luma.gl/shadertools": "^8.2.0",
+    "d3-color": "^1.4.1",
     "@carto/toolkit": "0.0.1-rc.18",
     "@turf/transform-translate": "^5.1.5",
     "d3-request": "^1.0.6",
     "dropbox": "^4.0.12",
     "global": "^4.3.0",
-    "hubble.gl": "^1.0.1",
     "kepler.gl": "^2.3.1",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
@@ -39,15 +31,13 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.0",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-middleware": "^3.5.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-hot-middleware": "^2.24.3"
+    "@babel/plugin-syntax-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.4",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.0.5",
+    "html-webpack-plugin": "^3.0.7",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.11"
   }
 }
