--- a/examples/kepler-integration/package.json
+++ b/examples/kepler-integration/package.json
@@ -7,8 +7,9 @@
     "@luma.gl/debug": "^8.2.0",
     "@luma.gl/shadertools": "^8.2.0",
     "d3-color": "^1.4.1",
-    "@carto/toolkit": "0.0.1-rc.18",
     "@turf/transform-translate": "^5.1.5",
+    "hubble.gl": "^1.0.1",
+    "@carto/toolkit": "0.0.1-rc.18",
     "d3-request": "^1.0.6",
     "dropbox": "^4.0.12",
     "global": "^4.3.0",
@@ -21,7 +22,7 @@
     "react-dom": "^16.8.4",
     "react-intl": "^3.12.0",
     "react-markdown": "^4.2.2",
-    "react-palm": "^3.1.2",
+    "react-palm": "^3.3.6",
     "react-redux": "^7.1.3",
     "react-router": "3.2.5",
     "react-router-redux": "^4.0.8",
@@ -31,13 +32,15 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.4",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.0.5",
-    "html-webpack-plugin": "^3.0.7",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.11"
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-middleware": "^3.5.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
